--- a/Login.html
+++ b/Login.html
@@ -49,6 +49,8 @@ if ($_SERVER['REQUEST_METHOD'] === 'POST') {
               <p>Dont't have an account<a href="#">Register</a></p>
             </div>
         </form>
+          <script src="script.js">    
+          </script>
       </body>
 </html>
 
